# psst-secret

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  docker-compose-with-persistence-example.yml  docker-compose.yml  entrypoint  manage.py  pyproject.toml  pytest.ini  setup.cfg
.github/: dependabot.yml
.github/workflows/: docker.yml  tests.yml
locale/da/LC_MESSAGES/: django.po
psst_secret/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
static/js/: crypto.js  password-strength.js
templates/: 404.html
templates/base/: base.html  layout.html
templates/whispers/: about.html  burned.html  confirm.html  confirm_burn.html  create.html  expired.html  forbidden.html  login.html  pending.html  submit.html  submitted.html  view.html
templates/whispers/email/: whisper_created.html  whisper_created.txt  whisper_submitted.html  whisper_submitted.txt
whispers/: admin.py  apps.py  auth_views.py  constants.py  email.py  middleware.py  models.py  redis_store.py  serializers.py  urls.py  views.py
whispers/management/commands/: cleanup_expired.py
whispers/migrations/: 0001_initial.py  0002_whisper_require_auth_submit_and_more.py  0003_whisper_notify_email.py  0004_whisper_max_views.py
whispers/templatetags/: whispers_extras.py
whispers/tests/: test_email.py  test_whisper.py
