[project]
name = "psst-secret"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "django>=6.0.0",
    "django-allauth[socialaccount]>=65.16.1",
    "django-environ>=0.12.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "psycopg2-binary>=2.9.10",
    "redis>=5.0.0",
    "granian>=2.7.3",
]

[dependency-groups]
dev = [
    "fakeredis>=2.35.1",
    "pre-commit>=4.5.1",
    "pytest-django>=4.12.0",
]