[project]
name = "psst-secret"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "django>=6.0.6",
    "django-allauth[socialaccount]>=65.18.0",
    "django-environ>=0.12.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "psycopg2-binary>=2.9.12",
    "redis>=8.0.0",
    "granian>=2.7.5",
    "django-better-azure-communication-email>=0.0.1",
]

[dependency-groups]
dev = [
    "fakeredis>=2.36.2",
    "pre-commit>=4.6.0",
    "pytest-django>=4.12.0",
    "pytest-env>=1.6.0",
]
